Update css to have word-wrap break long words to prevent overflow.

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -12,6 +12,7 @@
 body {
   background-color: #DDDDDD;
   padding-top: 60px;
+  word-wrap: break-word;
 }
 
 section {
